name:           base64-bytestring-type
version:        0
synopsis:       A newtype around ByteString, for base64 encoding
description:
  A newtype around ByteString, for base64 encoding.
  Strict and lazy, normal and url alphabet variants.
category:       Web
homepage:       https://github.com/futurice/haskell-base64-bytestring-type#readme
bug-reports:    https://github.com/futurice/haskell-base64-bytestring-type/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  1.12
tested-with:
  GHC==7.6.3
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.1

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-base64-bytestring-type

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base               >=4.6.0.1  && <4.11
    , base-compat        >=0.9.3    && <0.10
    , aeson              >=1.2.3.0  && <1.3
    , base64-bytestring  >=1.0.0.1  && <1.1
    , binary             >=0.5.1.1  && <0.10
    , bytestring         >=0.10.0.2 && <0.11
    , cereal             >=0.5.5.0  && <0.6
    , deepseq            >=1.3.0.1  && <1.5
    , hashable           >=1.2.6.1  && <1.3
    , semigroups         >=0.18.3   && <0.19
    , text               >=1.2.3.0  && <1.3

  if impl(ghc < 7.5)
    build-depends: ghc-prim

  exposed-modules:
      Data.ByteString.Base64.Type
      Data.ByteString.Base64.Lazy.Type
      Data.ByteString.Base64.URL.Type
      Data.ByteString.Base64.URL.Lazy.Type
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , aeson
    , base64-bytestring
    , binary
    , bytestring
    , cereal
    , deepseq
    , hashable
    , semigroups
    , text
    , base64-bytestring-type
    , tasty             >=0.10.0.2 && <1.1
    , tasty-quickcheck  >=0.8.3.2  && <0.10
  default-language: Haskell2010
